# OpenVAG

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: components.py  dtc.py  health.py  router.py  stats.py
app/core/: config.py  exceptions.py  pagination.py
app/db/: base.py  models.py  session.py
app/schemas/: component.py  dtc.py  health.py  stats.py
app/services/: component_service.py  dtc_service.py
db/: README.md  schema.sql
docs/: API.md  DEVELOPMENT.md
